gateway/1.14/modules/ROOT/nav.adoc
// Overview

* xref:index.adoc[Overview]
** xref:review-prerequisites.adoc[Requirements and Limits]
** xref:sizing-guide.adoc[Resource Sizing]
** xref:security-best-practices.adoc[]

// Release Notes

* xref:gateway-release-notes.adoc[Release Notes]

// Omni Gateway 
* xref:gateway-architecture-overview.adoc[]
** xref:gateway-architecture-basic-deployments.adoc[]
** xref:gateway-architecture-uc-overview.adoc[]
*** xref:gateway-architecture-uc1.adoc[]
*** xref:gateway-architecture-uc2.adoc[]
*** xref:gateway-architecture-uc3.adoc[]
*** xref:gateway-architecture-uc4.adoc[]
** xref:gateway-architecture-dr-ha-overview.adoc[High Availability and Disaster Recovery]
*** xref:gateway-architecture-managed-dr-ha.adoc[]
*** xref:gateway-architecture-multi-region.adoc[]
** xref:gateway-architecture-shared-storage.adoc[]
* xref:gateway-getting-started-overview.adoc[]
** xref:gateway-managed-getting-started.adoc[]
** xref:gateway-getting-started.adoc[]
** xref:gateway-k8-getting-started.adoc[]

// Deploy Managed Omni Gateways
* xref:gateway-managed-set-up.adoc[]
* xref:gateway-managed-ingress-egress.adoc[]
* xref:model-proxy-redirect.adoc[]

// Setting Up Self-Managed Omni Gateway
* xref:gateway-set-up.adoc[]
** xref:install.adoc[Download Omni Gateway]
** xref:conn-reg-run.adoc[Register and Run in Connected Mode]
*** xref:conn-reg-run-up.adoc[With a Username and Password]
*** xref:conn-reg-run-app.adoc[With a Connected App]
*** xref:conn-reg-run-token.adoc[With a Token]
** xref:local-reg-run.adoc[Register and Run in Local Mode]
*** xref:local-reg-run-up.adoc[With a Username and Password]
*** xref:local-reg-run-app.adoc[With a Connected App]
*** xref:local-reg-run-token.adoc[With a Token]

// Configuring Omni Gateway
* xref:gateway-configure.adoc[]
** xref:managed-configure.adoc[]
*** xref:managed-inbound-tls-config.adoc[]
*** xref:managed-outbound-tls-config.adoc[]
*** xref:managed-timeout.adoc[Configure Timeouts]
*** xref:managed-circuit-breaker.adoc[Configure Circuit Breaker]
*** xref:managed-tracing-config.adoc[]
** xref:conn-configure.adoc[]
*** xref:conn-rep-run.adoc[Configure Replicas]
*** xref:conn-tls-config.adoc[Configure TLS Context]
*** xref:conn-distributed-shared-storage-config.adoc[Configure Distributed Shared Storage]
*** xref:conn-shared-storage-config.adoc[Configure Redis Shared Storage]
*** xref:conn-replica-caching.adoc[Configure Omni Gateway Configuration Caching]
*** xref:conn-forward-proxy.adoc[Configure a Forward Proxy]
*** xref:conn-timeout.adoc[Configure Timeouts]
*** xref:conn-circuit-breaker.adoc[Configure Circuit Breaker]
*** xref:conn-tracing-config.adoc[Configure Distributed Tracing]
*** xref:conn-manage-public-api.adoc[Configure with the API Manager API Tool]
*** xref:conn-readiness-liveness.adoc[Configure a Readiness or Liveness Probe]
*** xref:conn-proxy-protocol.adoc[Configure PROXY Protocol]
*** xref:conn-jenkins-api.adoc[Automate Omni Gateway with a Jenkins Pipeline using the API Manager API]
*** xref:conn-jenkins-cli.adoc[Automate Omni Gateway with a Jenkins Pipeline using Anypoint CLI]
*** xref:conn-env-variables.adoc[Configure Environment Variables]
** xref:local-configure.adoc[]
*** xref:local-rep-run.adoc[Configure Replicas]
*** xref:local-tls-config.adoc[Configure TLS Context]
*** xref:local-distributed-shared-storage-config.adoc[Configure Distributed Shared Storage]
*** xref:local-shared-storage-config.adoc[Configure Redis Shared Storage]
*** xref:local-forward-proxy.adoc[Configure a Forward Proxy]
*** xref:local-timeout.adoc[Configure Timeouts]
*** xref:local-circuit-breaker.adoc[Configure Circuit Breaker]
*** xref:local-tracing-config.adoc[Configure Distributed Tracing]
*** xref:local-readiness-liveness.adoc[Configure a Readiness or Liveness Probe]
*** xref:local-proxy-protocol.adoc[Configure PROXY Protocol]
*** xref:local-env-variables.adoc[Configure Environment Variables]
*** xref:local-configuration-reference-guide.adoc[Declarative Configuration Reference]

// Publishing Omni Gateway APIs
* xref:gateway-publish-apis.adoc[]
** xref:gateway-publish-apis-conn.adoc[]
** xref:gateway-publish-apis-local.adoc[]
*** xref:local-publish-simple-api.adoc[Publish a Simple API Instance]
*** xref:local-publish-api-multiple-services.adoc[Publish an API Instance with Multiple Upstream Services]

// Securing and Governing Omni Gateway APIs
* xref:gateway-secure-apis.adoc[]
** xref:policies-included-directory.adoc[]
*** xref:policies-included-a2a-agent-card.adoc[A2A Agent Card]
*** xref:policies-included-a2a-pii-detector.adoc[A2A PII Detector]
*** xref:policies-included-a2a-prompt-decorator.adoc[A2A Prompt Decorator]
*** xref:policies-included-a2a-quality-evaluation.adoc[A2A Quality Evaluation]
*** xref:policies-included-a2a-schema-validation.adoc[A2A Schema Validation]
*** xref:policies-included-a2a-token-rate-limit.adoc[A2A Token Based Rate Limit]
*** xref:policies-included-a2a-v1-agent-card.adoc[A2A v1 Agent Card]
*** xref:policies-included-a2a-v1-azure-guardrails.adoc[A2A v1 Azure Content Guardrails]
*** xref:policies-included-a2a-v1-bedrock-guardrails.adoc[A2A v1 Bedrock Guardrails]
*** xref:policies-included-a2a-v1-pii-detector.adoc[A2A v1 PII Detector]
*** xref:policies-included-a2a-v1-prompt-decorator.adoc[A2A v1 Prompt Decorator]
*** xref:policies-included-a2a-v1-schema-validation.adoc[A2A v1 Schema Validation]
*** xref:policies-included-a2a-v1-to-v03-transcoder.adoc[A2A v1 to v0.3 Transcoder]
*** xref:policies-included-a2a-v1-token-rate-limit.adoc[A2A v1 Token Based Rate Limit]
*** xref:policies-included-agent-connection-telemetry.adoc[Agent Connection Telemetry Policy]
*** xref:policies-included-bedrock-guardrails.adoc[Amazon Bedrock Guardrails]
*** xref:policies-included-api-security-identification-header.adoc[API Security-Identification Header]
*** xref:policies-included-azure-content-safety.adoc[Azure Content Safety]
*** xref:policies-included-basic-auth-ldap.adoc[Basic Authentication: LDAP]
*** xref:policies-included-basic-auth-simple.adoc[Basic Authentication: Simple]
*** xref:policies-included-client-id-enforcement.adoc[Client ID Enforcement]
*** xref:policies-included-cors.adoc[Cross-Origin Resource Sharing (CORS)]
*** xref:policies-included-dataweave-body-transformation.adoc[DataWeave Body Transformation]
*** xref:policies-included-dataweave-headers-transformation.adoc[DataWeave Headers Transformation]
*** xref:policies-included-dataweave-request-filter.adoc[DataWeave Request Filter]
*** xref:policies-included-external-authorization.adoc[External Authorization]
*** xref:policies-included-external-processing.adoc[External Processing]
*** xref:policies-included-f5-guardrails.adoc[F5 Guardrails]
*** xref:policies-included-graphql-access-control.adoc[GraphQL Access Control]
*** xref:policies-included-graphql-introspection-control.adoc[GraphQL Introspection Control]
*** xref:policies-included-graphql-operation-limits.adoc[GraphQL Operation Limits]
*** xref:policies-included-graphql-schema-validation.adoc[GraphQL Schema Validation]
*** xref:policies-included-graphql-static-query-complexity.adoc[GraphQL Static Query Complexity]
*** xref:policies-included-header-injection.adoc[Header Injection]
*** xref:policies-included-header-removal.adoc[Header Removal]
*** xref:policies-included-health-check.adoc[Health Check]
*** xref:policies-included-http-caching.adoc[HTTP Caching]
*** xref:policies-included-injection-protection.adoc[Injection Protection]
*** xref:policies-included-ip-allowlist.adoc[IP Allowlist]
*** xref:policies-included-ip-blocklist.adoc[IP Blocklist]
*** xref:policies-included-javascript-scripting.adoc[JavaScript Scripting]
*** xref:policies-included-json-threat-protection.adoc[JSON Threat Protection]
*** xref:policies-included-jwt-validation.adoc[JWT Validation]
*** xref:policies-included-llm-pii-detection.adoc[LLM PII Detection]
*** xref:policies-included-llm-token-rate-limit.adoc[LLM Token Based Rate Limit]
*** xref:policies-included-mcp-attribute-access-control.adoc[MCP Attribute-Based Access Control]
*** xref:policies-included-mcp-global-access.adoc[MCP Global Access]
*** xref:policies-included-mcp-pii-detector.adoc[MCP PII Detector]
*** xref:policies-included-mcp-payload-optimization.adoc[MCP Payload Optimization]
*** xref:policies-included-mcp-progressive-disclosure.adoc[MCP Tools Progressive Disclosure]
*** xref:policies-included-mcp-schema-validation.adoc[MCP Schema Validation]
*** xref:policies-included-mcp-support.adoc[MCP Support]
*** xref:policies-included-mcp-tool-mapping.adoc[MCP Tool Mapping]
*** xref:policies-included-message-logging.adoc[Message Logging]
*** xref:policies-included-llm-proxy-request-compression.adoc[Model Proxy Request Compression]
*** xref:policies-included-oauth-protected-resource-metadata.adoc[OAuth 2.0 Protected Resource Metadata]
*** xref:policies-included-oauth-token-introspection.adoc[OAuth 2.0 Token Introspection]
*** xref:policies-included-openid-token-enforcement.adoc[OpenID Connect OAuth 2.0 Token Enforcement]
*** xref:policies-included-rate-limiting.adoc[Rate Limiting]
*** xref:policies-included-rate-limiting-sla.adoc[Rate Limiting: SLA-Based]
*** xref:policies-included-regex-prompt-guard.adoc[Regex Prompt Guard]
*** xref:policies-included-response-timeout.adoc[Response Timeout]
*** xref:policies-included-schema-validation.adoc[Schema Validation]
*** xref:policies-included-soap-schema-validation.adoc[SOAP Schema Validation]
*** xref:policies-included-spike-control.adoc[Spike Control]
*** xref:policies-included-sse-logging.adoc[SSE Logging Policy]
*** xref:policies-included-stream-idle-timeout.adoc[Stream Idle Timeout]
*** xref:policies-included-tracing.adoc[Tracing Policy]
*** xref:policies-included-traffic-management-route.adoc[Traffic Management for Multiple Upstream Services]
*** xref:policies-included-traffic-management.adoc[Traffic Management for Multiple Upstream Services (Weighted)]
*** xref:policies-included-tls.adoc[Transport Layer Security (TLS) - Inbound]
*** xref:policies-included-websocket-connection-limit.adoc[WebSocket Connection Limit]
*** xref:policies-included-xml-threat-protection.adoc[XML Threat Protection]
** xref:policies-outbound-directory.adoc[]
*** xref:policies-outbound-a2a-intask-authorization-code.adoc[A2A In-Task Authorization Code]
*** xref:policies-outbound-aws-lambda.adoc[AWS Lambda]
*** xref:policies-outbound-aws-signature.adoc[AWS Request Signature]
*** xref:policies-outbound-basic-auth.adoc[Credential Injection Basic Authentication]
*** xref:policies-outbound-api-key.adoc[Credential Injection API Key]
*** xref:policies-outbound-oauth.adoc[Credential Injection OAuth 2.0]
*** xref:policies-outbound-jwt-generation.adoc[Credential Injection JWT Generation]
*** xref:policies-outbound-oauth-obo.adoc[OAuth 2.0 OBO Credential Injection]
*** xref:policies-outbound-circuit-breaker.adoc[Circuit Breaker Policy]
*** xref:policies-outbound-message-logging.adoc[Outbound Message Logging]
*** xref:policies-included-tls-outbound.adoc[Transport Layer Security (TLS) - Outbound]
*** xref:policies-outbound-upstream-idle-timeout.adoc[Upstream Idle Timeout]
** xref:policies-custom-overview.adoc[]
*** xref:policies-custom-implement-rust.adoc[]
*** xref:policies-custom-getting-started.adoc[]
** xref:policies-automated-overview.adoc[]
*** xref:policies-automated-applying.adoc[Apply an Automated Inbound Policy]
** xref:policies-resource-level-overview.adoc[]
** xref:gateway-secure-conn.adoc[]
** xref:gateway-secure-local.adoc[]
*** xref:local-secure-api-with-basic-auth-policy.adoc[With Basic Authentication and Rate Limiting]
*** xref:local-secure-api-with-auto-policy.adoc[With an Automated Resource-Level Policy]
*** xref:local-deploy-custom-policy.adoc[With a Custom Policy]
** xref:policies-tls-configuration.adoc[]
** xref:policies-reorder.adoc[]
** xref:policies-mcp-access-control-together.adoc[]
** xref:policies-dataweave-support.adoc[DataWeave Support]

// Securing Agent Communication with Omni Gateway
* xref:agent-secure.adoc[]
** xref:agent-publish-apis.adoc[]
** xref:agent-policies.adoc[]

// Monitoring Omni Gateway
* xref:gateway-monitor.adoc[Monitoring Omni Gateway]
** xref:managed-monitor.adoc[Managed Omni Gateway]
*** xref:managed-view-status.adoc[Monitor Managed Omni Gateway]
*** xref:managed-message-log.adoc[Configure Message Logging]
*** xref:managed-view-api-metrics.adoc[View Key Metrics for Omni Gateway APIs]
*** xref:managed-view-api-status.adoc[Viewing API Status in Runtime Manager]
*** xref:managed-view-logs-in-runtime-manager.adoc[Viewing Runtime Logs in Runtime Manager]
*** xref:managed-view-logs-in-monitoring.adoc[Viewing Runtime and Access Logs in Anypoint Monitoring]
** xref:conn-monitor.adoc[Self-Managed Connected Mode]
*** xref:conn-message-log.adoc[Configure Message Logging]
*** xref:use-api-alerts.adoc[Configure API Alerts]
*** xref:conn-third-party-logs-config.adoc[Configure Logs for Third-Party Services]
*** xref:conn-view-api-metrics.adoc[View Key Metrics for Omni Gateway APIs]
*** xref:view-replica-status.adoc[View the Replica Status in Runtime Manager]
*** xref:conn-view-api-status.adoc[View the API Status in Runtime Manager]
*** xref:view-logs-in-runtime-manager.adoc[View Runtime Logs in Runtime Manager]
*** xref:view-logs-in-monitoring.adoc[View Runtime and Access Logs in Anypoint Monitoring]
*** xref:conn-disable-logs.adoc[Disable Log Output to Anypoint Platform]
** xref:local-monitor.adoc[Self-Managed Local Mode]
*** xref:local-third-party-logs-config.adoc[Configure External Logs for Omni Gateway in Local Mode]
*** xref:local-view-logs.adoc[View Standard Output Logs]

// Managing Kubernetes Deployments
* xref:gateway-k8-management.adoc[Managing Kubernetes Deployments]
** xref:gateway-k8-change-helm-settings.adoc[Update a Helm Chart]
** xref:gateway-k8-high-availability.adoc[Autoscale and Add Replicas to a Namespace]
** xref:gateway-k8-node-affinity-config.adoc[Configure Node Affinity]
** xref:gateway-k8-external-dns.adoc[Provide a Domain Name]
** xref:gateway-k8-ingress-class.adoc[Configure an IngressClass Resource]
** xref:gateway-istio.adoc[Integrate Omni Gateway with Istio Service Mesh]

// Upgrading and Maintaining Omni Gateway
* xref:gateway-maintain.adoc[]
** xref:gateway-version-lifecycle.adoc[]
** Managed Omni Gateway
*** xref:gateway-managed-upgrade-delete.adoc[Upgrade or Delete Managed Omni Gateway]
** Self-Managed Omni Gateway
*** xref:gateway-upgrade.adoc[Upgrade Self-Managed Omni Gateway]
*** xref:gateway-delete.adoc[Delete an Instance of Omni Gateway]
*** xref:gateway-uninstall.adoc[Uninstall Omni Gateway]
*** xref:gateway-renew-certificate.adoc[Renew Omni Gateway Registration]

// Troubleshooting
* xref:troubleshoot.adoc[]
** Managed Omni Gateway
*** xref:troubleshoot-managed-creation.adoc[Gateway Creation]
*** xref:troubleshoot-managed-maintenance.adoc[Gateway Maintinenance]
** Self-Managed Omni Gateway
*** xref:troubleshoot-debug-logs.adoc[Using Debug Logs]
*** xref:troubleshoot-reg.adoc[Registration]
*** xref:troubleshoot-linux-permissions.adoc[Linux Permissions]
*** xref:troubleshoot-platform-connection.adoc[Platform Connections]
*** xref:troubleshoot-logging.adoc[Logging]
*** xref:troubleshoot-linux-services.adoc[Linux Services]
*** xref:troubleshoot-admin-api.adoc[Using the CLI]
*** xref:troubleshoot-requests.adoc[Request Connection]
*** xref:troubleshoot-docker.adoc[Docker Command]
*** xref:troubleshoot-helm.adoc[Helm Command]
*** xref:troubleshoot-regex.adoc[Regular Expressions Compatibility]
